Handling load document page resource, download document, upload document, load document pages, print pdf requests